k8s/create-service-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: create-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: create-service
  template:
    metadata:
      labels:
        app: create-service
    spec:
      containers:
        - name: create-service
          image: overkilled-todo-app-create-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: create-service
spec:
  selector:
    app: create-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
