k8s/delete-service-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delete-service
  template:
    metadata:
      labels:
        app: delete-service
    spec:
      containers:
        - name: delete-service
          image: overkilled-todo-app-delete-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: delete-service
spec:
  selector:
    app: delete-service
  ports:
    - protocol: TCP
      port: 5004
      targetPort: 5004
