k8s/read-service-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: read-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: read-service
  template:
    metadata:
      labels:
        app: read-service
    spec:
      containers:
        - name: read-service
          image: overkilled-todo-app-read-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: read-service
spec:
  selector:
    app: read-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
