k8s/update-service-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: update-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: update-service
  template:
    metadata:
      labels:
        app: update-service
    spec:
      containers:
        - name: update-service
          image: overkilled-todo-app-update-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: update-service
spec:
  selector:
    app: update-service
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
