k8s/ingress-manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /todo
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
